Updated exam C (exe2) Completed documentation

--- a/Correzione prova/Exam_Feb_2020_EXE2_C_NEW/.project
+++ b/Correzione prova/Exam_Feb_2020_EXE2_C_NEW/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exam_Feb_2020_EXE2_C</name>
+	<name>Exam_Feb_2020_EXE2_C_NEW</name>
 	<comment></comment>
 	<projects>
 	</projects>
